--- a/templates/proyecto.html
+++ b/templates/proyecto.html
@@ -337,11 +337,11 @@
     <dl class="mt-10 text-center sm:max-w-3xl sm:mx-auto sm:grid sm:grid-cols-2 sm:gap-8">
       <div class="flex flex-col">
         <dt class="order-2 mt-2 text-lg leading-6 font-medium text-indigo-900">Temperatura</dt>
-        <dd class="order-1 text-5xl font-extrabold text-pink-700">50°C</dd>
+        <dd class="order-1 text-5xl font-extrabold text-pink-700">{{ temperatura }}</dd>
       </div>
       <div class="flex flex-col mt-10 sm:mt-0">
         <dt class="order-2 mt-2 text-lg leading-6 font-medium text-indigo-900">Humedad</dt>
-        <dd class="order-1 text-5xl font-extrabold text-pink-700">80%</dd>
+        <dd class="order-1 text-5xl font-extrabold text-pink-700">{{ humedad }}</dd>
       </div>
       <!--<div class="flex flex-col mt-10 sm:mt-0">
         <dt class="order-2 mt-2 text-lg leading-6 font-medium text-indigo-200">Calories</dt>
